implement render element wrappers, fix tickDelta, add entity.isReallyAlive() and livingEntity.isReallyAliveAndHealthy()